--- a/hyphoto/nature.html
+++ b/hyphoto/nature.html
@@ -26,54 +26,54 @@
                 <!-- Main -->
                 <div id="main">
                         <article class="thumb">
-                                <a href="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4cnZhVjIwZGxMRGJYRFBsL0d0ZmVsdEw5bFozRXZvMVJ3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                <a href="url"
                                         class="image">
-                                        <img src="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4cnZhVjIwZGxMRGJYRFBsL0d0ZmVsdEw5bFozRXZvMVJ3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                        <img src="url"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="http://imglf6.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4a014RDRzNW9zNXZoa1p2cE44U29SbjU4eW9JZmF3cDlRPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                <a href="url"
                                         class="image">
-                                        <img src="http://imglf6.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4a014RDRzNW9zNXZoa1p2cE44U29SbjU4eW9JZmF3cDlRPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                        <img src="url"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="http://imglf4.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4dDlncFJ4eEJ0NkhLOHJJYVlidjlzOFVzRGYzOTJLK0F3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                <a href="url"
                                         class="image">
-                                        <img src="http://imglf4.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4dDlncFJ4eEJ0NkhLOHJJYVlidjlzOFVzRGYzOTJLK0F3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                        <img src="url"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="http://imglf6.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4a1R0Njl4OUFBaGR2Q29Jazl2bHB0TDRva3c0WjRpZEt3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                <a href="url"
                                         class="image">
-                                        <img src="http://imglf6.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4a1R0Njl4OUFBaGR2Q29Jazl2bHB0TDRva3c0WjRpZEt3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                        <img src="url"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="http://imglf6.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4dnJsQWVjTjE4L0RNVUUvWjF0WkJXMXJQZXZrUm92RTRBPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                <a href="url"
                                         class="image">
-                                        <img src="http://imglf6.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4dnJsQWVjTjE4L0RNVUUvWjF0WkJXMXJQZXZrUm92RTRBPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                        <img src="url"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4aHdaWFFJVjUvWlFKVmFpRFN1dU5jRksydkt2Q1BDRjRBPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                <a href="url"
                                         class="image">
-                                        <img src="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVd3dG9ML2NiTkp4aHdaWFFJVjUvWlFKVmFpRFN1dU5jRksydkt2Q1BDRjRBPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg"
+                                        <img src="url"
                                                 alt="">
                                 </a>
                                 <h2></h2>
