--- a/photo.html
+++ b/photo.html
@@ -28,16 +28,16 @@
             <ul class="links">
                 <li>
                     <a href="index.html">Home</a>
-                    <li>
-                        <a href="tensorflow.html">Tensorflow Project</a>
-                        <li>
-                            <a href="peaband.html">Conceptual Wearable Device</a>
-                            <li>
-                                <a href="vpn/index.html">Vitrual Private Network</a>
-                                <li>
-                                    <a href="hyphoto.html">Photography</a>
-                                    <li>
-                                        <a href="me.html">About Me</a>
+                <li>
+                    <a href="tensorflow.html">Tensorflow Project</a>
+                <li>
+                    <a href="peaband.html">Conceptual Wearable Device</a>
+                <li>
+                    <a href="vpn/index.html">Vitrual Private Network</a>
+                <li>
+                    <a href="hyphoto.html">Photography</a>
+                <li>
+                    <a href="me.html">About Me</a>
             </ul>
         </nav>
         <!-- Banner -->
@@ -52,7 +52,7 @@
                 </header>
                 <div class="content">
                     <p>Capture Life Moments
-                    </div>
+                </div>
             </div>
         </section>
         <section id="one">
@@ -60,25 +60,40 @@
                 <div class="row">
                     <div class="col-6 col-12-small">
                         <h3>HYPhoto Scenery Collections</h3>
-                        <p></p>
-                        <a href="https://tuchong.com/2661459" target="_blank" class="button primary fit">My Tuchong Photo Index</a>
+                        <a href="https://tuchong.com/2661459" target="_blank" class="button primary fit">My Tuchong
+                            Photo Index</a>
+                            <p></p>
+                        <span class="image fit">
+                            <a href="hyphoto/city.html"><img src="images/NYCbridges.jpg" alt="">
+                                <h2>City View</h2>
+                            </a>
+                        </span>
+                        <span class="image fit">
+                            <a href="/hyphoto/nature.html"><img src="images/OrlandoSea.jpg" alt="">
+                                <h2>Nature</h2>
+                            </a>
+                        </span>
+
                     </div>
                     <div class="col-6 col-12-small">
                         <h3>Frankie Portrait Collections</h3>
-                        <h3>约拍请联系QQ1311009761</h3>
-                        <p></p>
-                        <span class="image fit">
-                        <a href="/hyphoto/lolita-xiaoran.html"><img src="http://imglf3.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzc0VtL0liaXUwTlIvdW5qcDhaRHdIUFdjRW5WUGpzc0d3PT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg"
-                                alt="">
-                        <h2>Lolita - Xiaoran @Airbnb</h2></a>
+                        <a href="http://wpa.qq.com/msgrd?v=3&uin=1311009761&site=qq&menu=yes" target="_blank" class="button primary fit">约拍请联系QQ-1311009761</a>
                         <p></p>
                         <span class="image fit">
                             <a href="/hyphoto/lolita-xiaoran.html"><img src="http://imglf3.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzc0VtL0liaXUwTlIvdW5qcDhaRHdIUFdjRW5WUGpzc0d3PT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg"
                                     alt="">
-                            <h2></h2></a>
+                                <h2>Lolita - Xiaoran @Airbnb</h2>
+                            </a>
                             <p></p>
-                        </span>
-                        <a href="http://frankieportrait.lofter.com/" target="_blank" class="button primary fit">Portrait Lofter Index</a>
+                            <span class="image fit">
+                                <a href="/hyphoto/lolita-xiaoran.html"><img src="http://imglf3.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzc0VtL0liaXUwTlIvdW5qcDhaRHdIUFdjRW5WUGpzc0d3PT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg"
+                                        alt="">
+                                    <h2></h2>
+                                </a>
+                                <p></p>
+                            </span>
+                            <a href="http://frankieportrait.lofter.com/" target="_blank" class="button primary fit">Portrait
+                                Lofter Index</a>
                     </div>
                     <!-- Break -->
                 </div>
@@ -93,26 +108,27 @@
                         <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
                             <span class="label">Facebook</span>
                         </a>
-                        <li>
-                            <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
-                                <span class="label">Weibo</span>
-                            </a>
-                            <li>
-                                <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
-                                    <span class="label">LinkedIn</span>
-                                </a>
-                                <li>
-                                    <a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github">
-                                        <span class="label">GitHub</span>
-                                    </a>
-                                    <li>
-                                        <a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin">
-                                            <span class="label">LinkedIn</span>
-                                        </a>
+                    <li>
+                        <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
+                            <span class="label">Weibo</span>
+                        </a>
+                    <li>
+                        <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
+                            <span class="label">LinkedIn</span>
+                        </a>
+                    <li>
+                        <a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github">
+                            <span class="label">GitHub</span>
+                        </a>
+                    <li>
+                        <a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin">
+                            <span class="label">LinkedIn</span>
+                        </a>
                 </ul>
                 <ul class="copyright">
                     <li>© Frankie Hao Yuan
-                        <li>Design: HTML5 UP</ul>
+                    <li>Design: HTML5 UP
+                </ul>
             </div>
         </footer>
     </div>
