--- a/photo.html
+++ b/photo.html
@@ -64,16 +64,25 @@
                             Photo Index</a>
                             <p></p>
                         <span class="image fit">
-                            <a href="hyphoto/city.html"><img src="images/NYCbridges.jpg" alt="">
-                                <h2>City View</h2>
+                            <a href="hyphoto/lightfiredream.html"><img src="https://i.postimg.cc/wv5Bcy0z/disneyfirework.jpg" alt="">
+                                <h2>Light, Fire, Dream</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/nature.html"><img src="images/OrlandoSea.jpg" alt="">
-                                <h2>Nature</h2>
+                            <a href="/hyphoto/horizon.html"><img src="https://i.postimg.cc/bJfJtH0L/Orlando-Sea.jpg" alt="">
+                                <h2>Near the Horizon</h2>
                             </a>
                         </span>
-
+                        <span class="image fit">
+                            <a href="/hyphoto/city.html"><img src="https://i.postimg.cc/vTQZPYNV/NYCbridges.jpg" alt="">
+                                <h2>City in my Mind</h2>
+                            </a>
+                        </span>
+                        <span class="image fit">
+                            <a href="/hyphoto/uncate.html"><img src="https://i.postimg.cc/qBYFXb6k/airchina.jpg" alt="">
+                                <h2>Cannot be Categorized</h2>
+                            </a>
+                        </span>
                     </div>
                     <div class="col-6 col-12-small">
                         <h3>Frankie Portrait Collections</h3>
