--- a/hyphoto/lightfiredream.html
+++ b/hyphoto/lightfiredream.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Phoebe @Caffebene - HYPhoto</title>
+<title>Light, Fire, Dream - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css">
@@ -13,12 +13,12 @@
                 <!-- Header -->
                 <header id="header">
                         <h1>
-                                <strong>HYPhoto</strong> Portrait Selection - Phoebe @Caffebene
+                                <strong>HYPhoto</strong> Light, Fire, Dream
                         </h1>
                         <nav>
                                 <ul>
                                         <li>
-                                                <a href="https://frankieyuan.com/hyphoto/" class="icon fa-home">Home
+                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
                                                         Page</a>
                                 </ul>
                         </nav>
@@ -26,57 +26,52 @@
                 <!-- Main -->
                 <div id="main">
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://i.postimg.cc/nVxTGy0Y/1.jpg" class="image">
+                                        <img src="https://i.postimg.cc/nVxTGy0Y/1.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>To brave explorers</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://i.postimg.cc/zzK0WzSG/2.jpg" class="image">
+                                        <img src="https://i.postimg.cc/zzK0WzSG/2.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>To those "fools"</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://i.postimg.cc/9W4xmtDT/3.jpg" class="image">
+                                        <img src="https://i.postimg.cc/9W4xmtDT/3.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>To those who dream big</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://i.postimg.cc/wH5wjBjW/2.jpg" class="image">
+                                        <img src="https://i.postimg.cc/wH5wjBjW/2.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>fight</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://i.postimg.cc/SkyD2pXm/1.jpg" class="image">
+                                        <img src="https://i.postimg.cc/SkyD2pXm/1.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>star and light</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://i.postimg.cc/nVTKYCsp/3.jpg" class="image">
+                                        <img src="https://i.postimg.cc/nVTKYCsp/3.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>trace of light</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://i.postimg.cc/NgWd59Xn/Japan-House.jpg" class="image">
+                                        <img src="https://i.postimg.cc/NgWd59Xn/Japan-House.jpg" alt="">
+                                </a>
+                                <h2>Japan House's 20th anniversary</h2>
                                 <p>
                         </article>
                 </div>
