--- a/photo.html
+++ b/photo.html
@@ -69,17 +69,17 @@
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/horizon.html"><img src="https://i.postimg.cc/bJfJtH0L/Orlando-Sea.jpg" alt="">
+                            <a href="hyphoto/horizon.html"><img src="https://i.postimg.cc/bJfJtH0L/Orlando-Sea.jpg" alt="">
                                 <h2>Near the Horizon</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/city.html"><img src="https://i.postimg.cc/vTQZPYNV/NYCbridges.jpg" alt="">
+                            <a href="hyphoto/city.html"><img src="https://i.postimg.cc/vTQZPYNV/NYCbridges.jpg" alt="">
                                 <h2>City in my Mind</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/uncate.html"><img src="https://i.postimg.cc/qBYFXb6k/airchina.jpg" alt="">
+                            <a href="hyphoto/uncate.html"><img src="https://i.postimg.cc/qBYFXb6k/airchina.jpg" alt="">
                                 <h2>Cannot be Categorized</h2>
                             </a>
                         </span>
