--- a/hyphoto/template.html
+++ b/hyphoto/template.html
@@ -18,7 +18,7 @@
                         <nav>
                                 <ul>
                                         <li>
-                                                <a href="https://frankieyuan.com/hyphoto/" class="icon fa-home">Home
+                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
                                                         Page</a>
                                 </ul>
                         </nav>
