--- a/hyphoto/lightfiredream.html
+++ b/hyphoto/lightfiredream.html
@@ -68,8 +68,8 @@
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://i.postimg.cc/NgWd59Xn/Japan-House.jpg" class="image">
-                                        <img src="https://i.postimg.cc/NgWd59Xn/Japan-House.jpg" alt="">
+                                <a href="hyphoto/images/lightfiredream/japan-house.jpg" class="image">
+                                        <img src="hyphoto/images/lightfiredream/japan-house.jpg" alt="">
                                 </a>
                                 <h2>Japan House's 20th anniversary</h2>
                                 <p>
