--- a/photo.html
+++ b/photo.html
@@ -64,22 +64,22 @@
                             Photo Index</a>
                             <p></p>
                         <span class="image fit">
-                            <a href="hyphoto/lightfiredream.html"><img src="https://i.postimg.cc/wv5Bcy0z/disneyfirework.jpg" alt="">
+                            <a href="hyphoto/lightfiredream.html"><img src="https://frankieyuan.com/images/disneyfirework.jpg" alt="">
                                 <h2>Light, Fire, Dream</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="hyphoto/horizon.html"><img src="https://i.postimg.cc/bJfJtH0L/Orlando-Sea.jpg" alt="">
+                            <a href="hyphoto/horizon.html"><img src="https://frankieyuan.com/images/Orlando-Sea.jpg" alt="">
                                 <h2>Near the Horizon</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="hyphoto/city.html"><img src="https://i.postimg.cc/vTQZPYNV/NYCbridges.jpg" alt="">
+                            <a href="hyphoto/city.html"><img src="https://frankieyuan.com/images/NYCbridges.jpg" alt="">
                                 <h2>City in my Mind</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="hyphoto/uncate.html"><img src="https://i.postimg.cc/qBYFXb6k/airchina.jpg" alt="">
+                            <a href="hyphoto/uncate.html"><img src="https://frankieyuan.com/images/airchina.jpg" alt="">
                                 <h2>Cannot be Categorized</h2>
                             </a>
                         </span>
