--- a/photo.html
+++ b/photo.html
@@ -69,7 +69,7 @@
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="hyphoto/horizon.html"><img src="https://frankieyuan.com/images/Orlando-Sea.jpg" alt="">
+                            <a href="hyphoto/horizon.html"><img src="https://frankieyuan.com/images/OrlandoSea.jpg" alt="">
                                 <h2>Near the Horizon</h2>
                             </a>
                         </span>
