--- a/hyphoto/horizon.html
+++ b/hyphoto/horizon.html
@@ -85,8 +85,8 @@
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://i.postimg.cc/bwKbmnHS/Japan-Sunrise.jpg" class="image">
-                                        <img src="https://i.postimg.cc/bwKbmnHS/Japan-Sunrise.jpg" alt="">
+                                <a href="https://frankieyuan.com/hyphoto/images/horzion/Hakone-Sunrise-min.jpg" class="image">
+                                        <img src="https://frankieyuan.com/hyphoto/images/horzion/Hakone-Sunrise-min.jpg" alt="">
                                 </a>
                                 <h2>Hakone Sunrise</h2>
                                 <p>
