--- a/hyphoto/lightfiredream.html
+++ b/hyphoto/lightfiredream.html
@@ -26,50 +26,50 @@
                 <!-- Main -->
                 <div id="main">
                         <article class="thumb">
-                                <a href="https://frankieyuan.com/hyphoto/images/lightfiredream/disney1.jpg" class="image">
-                                        <img src="https://frankieyuan.com/hyphoto/images/lightfiredream/disney1.jpg" alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney1.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney1.jpg" alt="">
                                 </a>
                                 <h2>To brave explorers</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan.com/hyphoto/images/lightfiredream/disney2.jpg" class="image">
-                                        <img src="https://frankieyuan.com/hyphoto/images/lightfiredream/disney2.jpg" alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney2.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney2.jpg" alt="">
                                 </a>
                                 <h2>To those "fools"</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan.com/hyphoto/images/lightfiredream/disney3.jpg" class="image">
-                                        <img src="https://frankieyuan.com/hyphoto/images/lightfiredream/disney3.jpg" alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney3.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney3.jpg" alt="">
                                 </a>
                                 <h2>To those who dream big</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan.com/hyphoto/images/lightfiredream/3.jpg" class="image">
-                                        <img src="https://frankieyuan.com/hyphoto/images/lightfiredream/3.jpg" alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/3.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/3.jpg" alt="">
                                 </a>
                                 <h2>fight</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan.com/hyphoto/images/lightfiredream/2.jpg" class="image">
-                                        <img src="https://frankieyuan.com/hyphoto/images/lightfiredream/2.jpg" alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/2.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/2.jpg" alt="">
                                 </a>
                                 <h2>star and light</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan.com/hyphoto/images/lightfiredream/1.jpg" class="image">
-                                        <img src="https://frankieyuan.com/hyphoto/images/lightfiredream/1.jpg" alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/1.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/1.jpg" alt="">
                                 </a>
                                 <h2>trace of light</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="https://frankieyuan.com/hyphoto/images/lightfiredream/japanhouse.jpg" class="image">
-                                        <img src="https://frankieyuan.com/hyphoto/images/lightfiredream/japanhouse.jpg" alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/japanhouse.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/japanhouse.jpg" alt="">
                                 </a>
                                 <h2>Japan House's 20th anniversary</h2>
                                 <p>
